k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k3s-server-landing
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: k3s-server-landing
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
