k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3s-server-landing
spec:
  ingressClassName: traefik
  rules:
    - host: landing.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3s-server-landing
                port:
                  number: 80
